--- a/index.css
+++ b/index.css
@@ -12,7 +12,14 @@
     display: flex;
     flex-direction: row;
 }
-body{
-    background-color: rgb(87, 169, 228);
+.lista {
+    margin: 0px 0px 0px -150px;
 }
-
+.modal-content #modal2{
+    background-color: rgb(241, 232, 58);
+    text-align: center;
+}
+body{
+    background-image: url(./hombre-haciendo-compras.jpg);
+    background-size: cover;
+}
